<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.rueno</groupId>
  <artifactId>Sorting-algorithms-visualized</artifactId>
  <version>0.0.1</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.jfree</groupId>
  		<artifactId>jfreechart</artifactId>
  		<version>1.5.0</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.jfree</groupId>
  		<artifactId>jcommon</artifactId>
  		<version>1.0.24</version>
  		<scope>provided</scope>
  	</dependency>
  </dependencies>
</project>